assets/scss/variables.scss
/* widths & heights */
$card-item-width: 330px;
$card-item-height: 198px;
$card-item-inner-width: calc($card-item-width * 0.9);
$card-item-inner-height: calc(
  ($card-item-inner-width * ($card-item-height / $card-item-width)) - 7px
);

$drop-zone-height: 250px;
$exit-game-button-width: 40px;
$chapter-progression-item-width: 20px;
$main-button-max-width: 400px;
$modal-player-feedback-width: 50%;
$modal-player-feedback-height: 320px;
$modal-player-feedback-textarea-height: 190px;
$ch3-other-user-profile-container-height: 600px;
$ch3-other-user-spectrum-height: 80px;
$ch3-other-user-mini-card-height: 70px;

$ch3-other-user-spectrum-width: 120px;

/* font families */
$headline-font: 'headline_font', sans_serif;
$text-font: 'text_font', serif;

/* font sizes */
$f-0: 3.2rem;
$f-1: 2.5rem;
$f-2: 2rem;
$f-3: 1.7rem;
$f-4: 1.3rem;
$f-5: 1rem;
$f-6: 0.875rem;
$f-7: 0.75rem;

/* z-index */
$z-1: 1;
$z-2: 2;
$z-3: 3;
$z-4: 4;
$z-5: 5;
$z-6: 6;
$z-top: 1000;

/* borders */
$border-width-1: 1px;
$border-width-2: 2px;
$border-width-3: 4px;

$border-radius-1: 5px;
$border-radius-2: 15px;
$border-radius-3: 100px;

/* blur */
$blur-1: 5px;
$blur-2: 10px;
$blur-3: 20px;
$blur-4: 50px;

/* shadow effects */
$draggable-item-shadow-effect-placed: drop-shadow(0 6px 3px rgb(0, 0, 0, 0.7));
$draggable-item-shadow-effect-placing: drop-shadow(0 4px 8px rgb(0, 0, 0, 1));
$draggable-item-shadow-effect-can-drop: drop-shadow(
  0 0 30px rgb(255, 255, 255, 1)
);
$draggable-item-shadow-effect-dropped: drop-shadow(
  0 0 20px rgb(255, 255, 255, 0.8)
);

$main-button-shadow-effect: drop-shadow(0 8px 7px rgb(0, 0, 0, 0.4));
$secondary-button-shadow-effect: drop-shadow(0 4px 4px rgb(0, 0, 0, 0.3));
$caption-shadow-effect: drop-shadow(1px 2px 0px rgb(0, 0, 0, 0.75));
$shadow-effect-disabled: drop-shadow(0 0 0 rgb(0, 0, 0, 0));

/* padding & margin offsets */
$offset-1: 4px;
$offset-2: 8px;
$offset-3: 16px;
$offset-4: 32px;
$offset-5: 56px;
$offset-6: 80px;
$offset-7: 144px;
$offset-8: 190px;

/* colors */
$black-color: #000;
$white-color: #fff;
$dark-blue: #10103d;
$very-dark-blue: #050524;
$light-gray: #adadad;
$gray: #878787;
$card-item-background-color: #0e0b30;
$card-item-outline-color: #909090;
$background-color: #3c1b9a;
$signal-color: #8968e7;
$action-color: #3c1b9a;
$button-outline-color: $white-color;
$button-disabled-color: $gray;
$warn-overlay-color: rgba(5, 5, 36, 0.3);

/* spectrum gradient colors
	are hand picked color vars used in background gradients of the spectra	
	c-1-a is gradient 1 color of the left extreme of the gradient
	c-1-b is gradient 1 color of the right extreme of the gradient
	spectrum gradient css classes are generated in gradients.scss and exposed in global.scss
*/
// yellow blue
$c-1-a: #ffed49;
$c-1-b: #70a0fd;

// green orange
$c-2-a: #8aefb3;
$c-2-b: #ff922e;

// pink blue
$c-3-a: #f37de7;
$c-3-b: #76a0f3;

// make a list
$spectra-color-pairs: (($c-1-a, $c-1-b), ($c-2-a, $c-2-b), ($c-3-a, $c-3-b));

